[MODINVOICE-613]. Incorrect encumbrances on orders with paid and cancelled invoices